--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,3 @@
-{{#if session.currentUser}}
-  <p>Signed in as {{session.currentUser}}</p>
-{{/if}}
+<div class="uk-container uk-margin-top">
 {{outlet}}
+</div>
