--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,2 +1,14 @@
-{{input value=username}}
-<button {{action "login" username}}>Login</button>
+<div class="uk-vertical-align uk-text-center uk-height-1-1">
+    <div class="uk-vertical-align-middle" style="width: 250px;">
+
+        <form class="uk-panel uk-panel-box uk-form">
+            <div class="uk-form-row">
+                {{input class="uk-width-1-1 uk-form-large" value=username placeholder="Username"}}
+            </div>
+            <div class="uk-form-row">
+                <button class="uk-width-1-1 uk-button uk-button-primary uk-button-large" {{action "login" username}}>Login</button>
+            </div>
+        </form>
+
+    </div>
+</div>
